// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CitySearch renders component with blank city and region 1`] = `
Array [
  <div
    className=""
  >
    <h2
      className="text-base mb-1"
    >
      Where are you located?
    </h2>
    <label
      htmlFor="stateSelect"
    >
      <select
        className="mb-3 w-full"
        id="stateSelect"
        name="type"
        onBlur={[Function]}
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          State Select
        </option>
        <option
          value="Alabama"
        >
          Alabama
        </option>
        <option
          value="Alaska"
        >
          Alaska
        </option>
        <option
          value="American Samoa"
        >
          American Samoa
        </option>
        <option
          value="Arizona"
        >
          Arizona
        </option>
        <option
          value="Arkansas"
        >
          Arkansas
        </option>
        <option
          value="California"
        >
          California
        </option>
        <option
          value="Colorado"
        >
          Colorado
        </option>
        <option
          value="Connecticut"
        >
          Connecticut
        </option>
        <option
          value="Delaware"
        >
          Delaware
        </option>
        <option
          value="District Of Columbia"
        >
          District Of Columbia
        </option>
        <option
          value="Federated States Of Micronesia"
        >
          Federated States Of Micronesia
        </option>
        <option
          value="Florida"
        >
          Florida
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          value="Guam"
        >
          Guam
        </option>
        <option
          value="Hawaii"
        >
          Hawaii
        </option>
        <option
          value="Idaho"
        >
          Idaho
        </option>
        <option
          value="Illinois"
        >
          Illinois
        </option>
        <option
          value="Indiana"
        >
          Indiana
        </option>
        <option
          value="Iowa"
        >
          Iowa
        </option>
        <option
          value="Kansas"
        >
          Kansas
        </option>
        <option
          value="Kentucky"
        >
          Kentucky
        </option>
        <option
          value="Louisiana"
        >
          Louisiana
        </option>
        <option
          value="Maine"
        >
          Maine
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Maryland"
        >
          Maryland
        </option>
        <option
          value="Massachusetts"
        >
          Massachusetts
        </option>
        <option
          value="Michigan"
        >
          Michigan
        </option>
        <option
          value="Minnesota"
        >
          Minnesota
        </option>
        <option
          value="Mississippi"
        >
          Mississippi
        </option>
        <option
          value="Missouri"
        >
          Missouri
        </option>
        <option
          value="Montana"
        >
          Montana
        </option>
        <option
          value="Nebraska"
        >
          Nebraska
        </option>
        <option
          value="Nevada"
        >
          Nevada
        </option>
        <option
          value="New Hampshire"
        >
          New Hampshire
        </option>
        <option
          value="New Jersey"
        >
          New Jersey
        </option>
        <option
          value="New Mexico"
        >
          New Mexico
        </option>
        <option
          value="New York"
        >
          New York
        </option>
        <option
          value="North Carolina"
        >
          North Carolina
        </option>
        <option
          value="North Dakota"
        >
          North Dakota
        </option>
        <option
          value="Northern Mariana Islands"
        >
          Northern Mariana Islands
        </option>
        <option
          value="Ohio"
        >
          Ohio
        </option>
        <option
          value="Oklahoma"
        >
          Oklahoma
        </option>
        <option
          value="Oregon"
        >
          Oregon
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Pennsylvania"
        >
          Pennsylvania
        </option>
        <option
          value="Puerto Rico"
        >
          Puerto Rico
        </option>
        <option
          value="Rhode Island"
        >
          Rhode Island
        </option>
        <option
          value="South Carolina"
        >
          South Carolina
        </option>
        <option
          value="South Dakota"
        >
          South Dakota
        </option>
        <option
          value="Tennessee"
        >
          Tennessee
        </option>
        <option
          value="Texas"
        >
          Texas
        </option>
        <option
          value="Utah"
        >
          Utah
        </option>
        <option
          value="Vermont"
        >
          Vermont
        </option>
        <option
          value="Virgin Islands"
        >
          Virgin Islands
        </option>
        <option
          value="Virginia"
        >
          Virginia
        </option>
        <option
          value="Washington"
        >
          Washington
        </option>
        <option
          value="West Virginia"
        >
          West Virginia
        </option>
        <option
          value="Wisconsin"
        >
          Wisconsin
        </option>
        <option
          value="Wyoming"
        >
          Wyoming
        </option>
      </select>
    </label>
  </div>,
  "",
  <div
    className="hidden mb-3"
  >
    <label
      htmlFor="citySelect"
    >
      <select
        className="w-full"
        id="citySelect"
        name="type"
        onBlur={[Function]}
        onChange={[Function]}
        value=""
      >
        <option
          value="New York"
        >
          New York
          , 
          New York
        </option>
      </select>
    </label>
  </div>,
]
`;

exports[`components/CitySearch renders component without crashing 1`] = `
Array [
  <div
    className="hidden"
  >
    <h2
      className="text-base mb-1"
    >
      Where are you located?
    </h2>
    <label
      htmlFor="stateSelect"
    >
      <select
        className="mb-3 w-full"
        id="stateSelect"
        name="type"
        onBlur={[Function]}
        onChange={[Function]}
        value="New York"
      >
        <option
          value=""
        >
          State Select
        </option>
        <option
          value="Alabama"
        >
          Alabama
        </option>
        <option
          value="Alaska"
        >
          Alaska
        </option>
        <option
          value="American Samoa"
        >
          American Samoa
        </option>
        <option
          value="Arizona"
        >
          Arizona
        </option>
        <option
          value="Arkansas"
        >
          Arkansas
        </option>
        <option
          value="California"
        >
          California
        </option>
        <option
          value="Colorado"
        >
          Colorado
        </option>
        <option
          value="Connecticut"
        >
          Connecticut
        </option>
        <option
          value="Delaware"
        >
          Delaware
        </option>
        <option
          value="District Of Columbia"
        >
          District Of Columbia
        </option>
        <option
          value="Federated States Of Micronesia"
        >
          Federated States Of Micronesia
        </option>
        <option
          value="Florida"
        >
          Florida
        </option>
        <option
          value="Georgia"
        >
          Georgia
        </option>
        <option
          value="Guam"
        >
          Guam
        </option>
        <option
          value="Hawaii"
        >
          Hawaii
        </option>
        <option
          value="Idaho"
        >
          Idaho
        </option>
        <option
          value="Illinois"
        >
          Illinois
        </option>
        <option
          value="Indiana"
        >
          Indiana
        </option>
        <option
          value="Iowa"
        >
          Iowa
        </option>
        <option
          value="Kansas"
        >
          Kansas
        </option>
        <option
          value="Kentucky"
        >
          Kentucky
        </option>
        <option
          value="Louisiana"
        >
          Louisiana
        </option>
        <option
          value="Maine"
        >
          Maine
        </option>
        <option
          value="Marshall Islands"
        >
          Marshall Islands
        </option>
        <option
          value="Maryland"
        >
          Maryland
        </option>
        <option
          value="Massachusetts"
        >
          Massachusetts
        </option>
        <option
          value="Michigan"
        >
          Michigan
        </option>
        <option
          value="Minnesota"
        >
          Minnesota
        </option>
        <option
          value="Mississippi"
        >
          Mississippi
        </option>
        <option
          value="Missouri"
        >
          Missouri
        </option>
        <option
          value="Montana"
        >
          Montana
        </option>
        <option
          value="Nebraska"
        >
          Nebraska
        </option>
        <option
          value="Nevada"
        >
          Nevada
        </option>
        <option
          value="New Hampshire"
        >
          New Hampshire
        </option>
        <option
          value="New Jersey"
        >
          New Jersey
        </option>
        <option
          value="New Mexico"
        >
          New Mexico
        </option>
        <option
          value="New York"
        >
          New York
        </option>
        <option
          value="North Carolina"
        >
          North Carolina
        </option>
        <option
          value="North Dakota"
        >
          North Dakota
        </option>
        <option
          value="Northern Mariana Islands"
        >
          Northern Mariana Islands
        </option>
        <option
          value="Ohio"
        >
          Ohio
        </option>
        <option
          value="Oklahoma"
        >
          Oklahoma
        </option>
        <option
          value="Oregon"
        >
          Oregon
        </option>
        <option
          value="Palau"
        >
          Palau
        </option>
        <option
          value="Pennsylvania"
        >
          Pennsylvania
        </option>
        <option
          value="Puerto Rico"
        >
          Puerto Rico
        </option>
        <option
          value="Rhode Island"
        >
          Rhode Island
        </option>
        <option
          value="South Carolina"
        >
          South Carolina
        </option>
        <option
          value="South Dakota"
        >
          South Dakota
        </option>
        <option
          value="Tennessee"
        >
          Tennessee
        </option>
        <option
          value="Texas"
        >
          Texas
        </option>
        <option
          value="Utah"
        >
          Utah
        </option>
        <option
          value="Vermont"
        >
          Vermont
        </option>
        <option
          value="Virgin Islands"
        >
          Virgin Islands
        </option>
        <option
          value="Virginia"
        >
          Virginia
        </option>
        <option
          value="Washington"
        >
          Washington
        </option>
        <option
          value="West Virginia"
        >
          West Virginia
        </option>
        <option
          value="Wisconsin"
        >
          Wisconsin
        </option>
        <option
          value="Wyoming"
        >
          Wyoming
        </option>
      </select>
    </label>
  </div>,
  <h2
    className="text-base mb-2"
  >
    City in 
    <span
      className="inline-block mr-2"
    >
      New York
    </span>
    <button
      className="p-1 mr-1"
      onClick={[Function]}
      type="button"
    >
      Not the right state?
    </button>
    <button
      className="p-1"
      onClick={[Function]}
      type="button"
    >
      Reset City Search
    </button>
  </h2>,
  <div
    className="mb-3"
  >
    <div
      className="border p-2 rounded inline-block"
    >
      <b>
        New York
      </b>
      , 
      <span
        className="inline-block mr-3"
      >
        New York
      </span>
      <button
        className="p-1"
        onClick={[Function]}
        type="button"
      >
        Not the right city?
      </button>
    </div>
  </div>,
]
`;

exports[`components/CitySearch renders with blank session region 1`] = `null`;

exports[`components/CitySearch renders with custom label 1`] = `null`;

exports[`components/CitySearch renders with null session region 1`] = `null`;

exports[`components/CitySearch renders with remove button 1`] = `null`;

exports[`components/CitySearch renders without crashing 1`] = `null`;
